Add changes to the main page
- Added a call to arms to the intro section

- Changed font family to various parts of the page and other styling

- Added tic-tac-toe project to the work section

- Added tic-tac-toe project to the work section

--- a/index.html
+++ b/index.html
@@ -25,12 +25,24 @@
     </nav>
 
     <div class="container">
-
         <section id="about">
-            <div class="fade-in-text intro hidden">
-                <span class="introduction-name">Mateus Britto</span>
-                <span class="introduction-title">Web Developer</span>
+
+            <div class="intro hidden">
+                <h2 class="call-to-action">Looking to transform your business or non-profit online?<br><br> Need expert
+                    web
+                    development to elevate your digital presence? <br><br> Let's make it happen! Contact me to unleash
+                    your
+                    online potential today.</h2>
+                <button class="contact-btn">Contact</button>
             </div>
+            <div class="profile-container hidden">
+                <img class="profile" src="/My-projects/project-images/profile.webp" alt="profile">
+                <div class="title-container">
+                    <h2 class="introduction-name">Mateus Britto</h2>
+                    <h2 class="introduction-title">Web Developer</h2>
+                </div>
+            </div>
+
         </section>
 
         <section id="work">
@@ -84,12 +96,18 @@
                         <a href="etch-a-sketch/index.html" target="_blank">Etch-a-Sketch</a>
                     </figcaption>
                 </figure>
+                <figure class="tic-tac-toe img-container hidden">
+                    <img class="project-img" src="project-images/tic-tac-toe.webp" alt="tic-tac-toe">
+                    <figcaption class="img-caption">
+                        <a href="tic-tac-toe/index.html" target="_blank">Tic Tac Toe</a>
+                    </figcaption>
+                </figure>
             </div>
 
         </section>
 
         <section id="contact">
-            <div class="quote-div">
+            <div class="quote-div hidden">
                 <figure class="tolkien">
                     <blockquote>
                         <p class="quote">“All we have to decide is what to do with the time that is given
@@ -99,7 +117,7 @@
                 </figure>
                 <p class="invite">Shall we go on an adventure?</p>
             </div>
-            <div class="contact-info">
+            <div class="contact-info hidden">
                 <ul class="contacts-list">
                     <li><a href="https://www.facebook.com/mateus.britto.758" target="_blank" rel="noopener noreferrer"
                             aria-label="Visit my Facebook profile">
