Changes profile img location

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button class="contact-btn">Contact</button>
             </div>
             <div class="profile-container hidden">
-                <img class="profile" src="/My-projects/project-images/profile.webp" alt="profile">
+                <img class="profile" src="project-images/profile.webp" alt="profile">
                 <div class="title-container">
                     <h2 class="introduction-name">Mateus Britto</h2>
                     <h2 class="introduction-title">Web Developer</h2>
