Add specific height and width to images on the tag

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button class="contact-btn">Contact</button>
             </div>
             <div class="profile-container hidden">
-                <img class="profile" src="project-images/profile.webp" alt="profile">
+                <img class="profile" src="project-images/profile.webp" width="480" height="480" alt="profile">
                 <div class="title-container">
                     <h2 class="introduction-name">Mateus Britto</h2>
                     <h2 class="introduction-title">Web Developer</h2>
@@ -48,20 +48,21 @@
                     <h1 class="main-content-html-title hidden">A taste of my work...</h1>
                 </div>
                 <figure class="form img-container hidden">
-                    <img class="project-img" src="project-images/form-img.webp" alt="form">
+                    <img class="project-img" src="project-images/form-img.webp" width="350" height="196" alt="form">
                     <figcaption class="img-caption">
                         <a href="form/survey-form.html" target="_blank">Simple form</a>
                     </figcaption>
                 </figure>
                 <figure class="landing-page img-container hidden">
-                    <img class="project-img" src="project-images/landing-page-img.webp" alt="landing-page">
+                    <img class="project-img" src="project-images/landing-page-img.webp" width="350" height="196"
+                        alt="landing-page">
                     <figcaption class="img-caption">
                         <a href="landing-page/landing-page.html" target="_blank" rel="noopener noreferrer">Landing
                             Page</a>
                     </figcaption>
                 </figure>
                 <figure class="technical-doc img-container hidden">
-                    <img class="project-img" src="project-images/technical-documentation.webp"
+                    <img class="project-img" src="project-images/technical-documentation.webp" width="350" height="196"
                         alt="technical-documentation">
                     <figcaption class="img-caption">
                         <a href="technical-documentation/technical-documentation-page.html" target="_blank">
@@ -70,31 +71,36 @@
                     </figcaption>
                 </figure>
                 <figure class="tribute-page img-container hidden">
-                    <img class="project-img" src="project-images/tribute-page-img.webp" alt="tribute-page">
+                    <img class="project-img" src="project-images/tribute-page-img.webp" width="350" height="196"
+                        alt="tribute-page">
                     <figcaption class="img-caption">
                         <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page</a>
                     </figcaption>
                 </figure>
                 <figure class="calculator img-container hidden">
-                    <img class="project-img" src="project-images/calculator.webp" alt="calculator">
+                    <img class="project-img" src="project-images/calculator.webp" width="350" height="196"
+                        alt="calculator">
                     <figcaption class="img-caption">
                         <a href="calculator/index.html" target="_blank">Calculator</a>
                     </figcaption>
                 </figure>
                 <figure class="quote-generator img-container hidden">
-                    <img class="project-img" src="project-images/quote-generator.webp" alt="quote-generator">
+                    <img class="project-img" src="project-images/quote-generator.webp" width="350" height="196"
+                        alt="quote-generator">
                     <figcaption class="img-caption">
                         <a href="quote-generator/index.html" target="_blank">Quote Generator</a>
                     </figcaption>
                 </figure>
                 <figure class="etch-a-sketch img-container hidden">
-                    <img class="project-img" src="project-images/etch-a-sketch.webp" alt="etch-a-sketch">
+                    <img class="project-img" src="project-images/etch-a-sketch.webp" width="350" height="196"
+                        alt="etch-a-sketch">
                     <figcaption class="img-caption">
                         <a href="etch-a-sketch/index.html" target="_blank">Etch-a-Sketch</a>
                     </figcaption>
                 </figure>
                 <figure class="tic-tac-toe img-container hidden">
-                    <img class="project-img" src="project-images/tic-tac-toe.webp" alt="tic-tac-toe">
+                    <img class="project-img" src="project-images/tic-tac-toe.webp" width="350" height="196"
+                        alt="tic-tac-toe">
                     <figcaption class="img-caption">
                         <a href="tic-tac-toe/index.html" target="_blank">Tic Tac Toe</a>
                     </figcaption>
