Change img formats

--- a/tribute-page/tribute-page.html
+++ b/tribute-page/tribute-page.html
@@ -19,7 +19,7 @@
             </header>
         </div>
         <div id="img-div">
-            <img id="image" src="tribute-page.jpg" alt="J.R.R Tolkien">
+            <img id="image" src="tribute-page.webp" alt="J.R.R Tolkien">
             <figcaption id="img-caption">Professor Tolkien, in his library smoking his signature pipe</figcaption>
         </div>
         <div id="time-line">
