Add app.js file to landing page

--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -70,11 +70,11 @@
             </section>
 
             <section id="tutorial">
-                <iframe width="550" height="300" src="https://www.youtube.com/embed/55gsu3_36Fs"
-                    title="How To Play Yu-Gi-Oh in 3 Minutes!" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen class="video">
-                </iframe>
+                <div class="youtube-container" data-video-id="55gsu3_36Fs">
+                    <img src="https://img.youtube.com/vi/55gsu3_36Fs/hqdefault.jpg" alt="Video Title">
+                    <button class="play-button">PLAY</button>
+                </div>
+
             </section>
 
             <section id="pricing">
@@ -121,6 +121,7 @@
         </ul>
         <p>Copyright 2000, Yu-Gi-Oh!</p>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
