Address more lighthouse errors

--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,800;1,100;1,200;1,300;1,800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+
     <style>
         /* Inline Critical CSS */
         #header,
@@ -60,7 +59,7 @@
 <body>
     <div id="page-wrapper">
         <header id="header">
-            <img src="Yu-Gi-Oh_Logo.png" alt="logo" class="img-logo">
+            <img src="Yu-Gi-Oh_Logo.png" alt="logo" class="img-logo" width="224" height="89">
             <nav id="nav-bar">
                 <ul class="nav-ul">
                     <li class="nav-li"><a class="nav-a" href="#subscription">Features</a></li>
