--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
@@ -112,8 +111,8 @@
 
             <section id="tutorial">
                 <div class="youtube-container" data-video-id="55gsu3_36Fs">
-                    <img src="https://img.youtube.com/vi/55gsu3_36Fs/hqdefault.jpg" alt="Video Title" width="550"
-                        height="350">
+                    <img src="https://img.youtube.com/vi/55gsu3_36Fs/hqdefault.jpg" alt="Video Title" width="355"
+                        height="265">
                     <button class="play-button">PLAY</button>
                 </div>
 
@@ -163,6 +162,8 @@
         </ul>
         <p>Copyright 2000, Yu-Gi-Oh!</p>
     </footer>
+    <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin defer></script>
+    <script src="app.js" defer></script>
 </body>
 
 </html>
