--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -75,7 +75,7 @@
                 <h1 class="sub-desc">The Definitive Yu-Gi-Oh! Marketplace</h1>
                 <form class="form" action="https://www.submit.com/email-submit">
                     <input class="email" type="email" id="email" placeholder="Enter your email" required>
-                    <input class="button" type="submit-subscription" id="submit-subscription" name="Submit">
+                    <input class="button" type="submit" id="submit-subscription" name="Submit">
                 </form>
             </section>
 
