Change the link of the todo-list

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </figcaption>
                 </figure>
                 <figure class="todo-list img-container hidden">
-                    <a href="/My-projects/todo-list/dist/index.html" target="_blank">
+                    <a href="todo-list/dist/index.html" target="_blank">
                         <img class="project-img" src="project-images/todo-list.webp" width="350" height="196"
                             alt="todo-list">
                         <figcaption class="img-caption">
