--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/My-projects/todo-list/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
     <title>Todo List</title>
 </head>
